[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wst-ha"
version = "0.1.0"
description = "Home Assistant custom component for Westerscheldetunnel (WST) status"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[project.optional-dependencies]
test = [
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-asyncio>=0.23.0",
    "aiohttp>=3.8.0",
    "pytest-cov>=4.0.0",
]